// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainEditorAssetHeader->load wdb test load wdb extract assets from loaded wdb asset extract material assets fix bug if wdb gameObjects share the same material, should only extrace the shared material once 1`] = `
<article
  className="wonder-asset-assetChildren"
>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wBDAAEBAQEBAQEBAQE"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        lightMaterial_0
      </span>
    </div>
  </article>
</article>
`;

exports[`MainEditorAssetHeader->load wdb test load wdb extract assets from loaded wdb asset extract material assets if wdb->material not exist in assets, extract them and add to assets material asset should has unique name 1`] = `
<article
  className="wonder-asset-assetChildren"
>
  <article
    className="wonder-asset-folderBox"
    id="folder-7"
    style={
      Object {
        "border": "0px",
      }
    }
  >
    <div
      className="item-ground"
      draggable={true}
      onDragEnd={[Function]}
      onDragEnter={[Function]}
      onDragLeave={[Function]}
      onDragOver={[Function]}
      onDragStart={[Function]}
      onDrop={[Function]}
    />
    <div
      className="box-image"
    >
      <img
        src="./public/img/assetPackage.png"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        Materials
      </span>
    </div>
  </article>
  <article
    className="wonder-asset-folderBox"
    id="folder-9"
    style={
      Object {
        "border": "0px",
      }
    }
  >
    <div
      className="item-ground"
      draggable={true}
      onDragEnd={[Function]}
      onDragEnter={[Function]}
      onDragLeave={[Function]}
      onDragOver={[Function]}
      onDragStart={[Function]}
      onDrop={[Function]}
    />
    <div
      className="box-image"
    >
      <img
        src="./public/img/assetPackage.png"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        Textures
      </span>
    </div>
  </article>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="data:image/png;base64 for img-canvas"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        Wdb
      </span>
    </div>
  </article>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAGb0lEQVRoQ+2azUsVfRTHj5pvaaGIitTChW5DUHDhC6KCighmGuomwo2I/4aQ4kLFCNuEiGBgtBBRcaGgiLRw4V4oUTDFgohKTX34Ds+5nHvu+c2duRo8xDMwzL3jzL3nc7/n7XfGpK6urmv6C7ak/0H+YyreqiIPHz6k2tpaKi4upuTkZEpKSvJ2vX38+JHW19dpf3//1n6OG4PA+CdPnlBWVpZntAZwwYDg+vqafvz4QW/fvqVPnz7dCCphkPv371N/f79nOO9stDzCOq0K3gOCN7y+urqiN2/eJKxSaJC0tDQaHBykO3fuhIKwXEyC4DVgsA8PD9PZ2VkohUKBlJWVUUNDA6WkpESpIN2JDZYuJc9Z1rE6OLI6S0tL9OHDh8AwgUEaGxvp0aNHURAawM+1XIpICI4bhtnZ2aGFhYVAMIFAoEJYCAtSW8QK3AZMXJCKigqqqqrylNAupRWQxsskwOclCP/q8igVkW62trZGGxsbvsr4ghQVFVFnZ2dMYFu/Np9jAAbX8NJADu7Ly0svyC2F+JqpqSk6Pj52wviCDAwMeBBSDV0r5HuGwD1y5/s57UqA379/E3YLRkLj70NDQ+FBnj17Rvfu3XO6lMuNYHRqamrMjvMc8ACB8RcXF5E9CAyuf/HihQljKlJYWEiPHz/2jPFLtZY7QQncl56eTqg5fLRAzs/PvXqBI0OxWtLNOI7wt+npaTo4OIiBMUH6+vo8I9itZOXW8SGDmiEYICMjg7DjvLUB4NevX97OMFCG4wVHTgAMiL+jYOotBqSgoIDa29vjxkY8NQCQmZnpgbg2GAeInz9/RpTxczGGefnyJX379i3qY2NAuru7CX2UVkMaLtOuDnCowUoABO/9NgaRqrgCn0HghqOjo/4gz58/93w8rFtxkLNbASIsCOKFs5isLzJeAAPQkZERN0h+fj61tbVFUqdV1HT6lXWDs5VUBMHu157ArThOGCRIKp6dnaXDw8MITJRr1dTUUGlpqQli1Q8+BxgoIjMWAKAIjgD0C3YAcPYKkoahyt7eHr17984GQXzgy7mY6bWGlbEYhosejIZ7sYtx+sVnsjJwFfi5TL86a+lKL90LiuH68fFxG6S3t9f7Ba1AD9qWsCoSSNYjXnfogggwjg8LQqZhgODasbExN4hVP6wVoKUOq8Iwuk3BPQzCxrDx7FI4r4uhbCZlPXGC9PT0mIUwKIgMfFZVqitdi7MPDJe7hrAWXXy907UQI4kqIgOfg18eZSsvWw7+hXVrolt67VqAmZiYsF3r6dOnCcWItS7RiUJPU2Rn61qTaBi+h91ycnLSBsHag4NdDxeCLGvZWN0Zu0ZCrlhgAAuElUPWevXqlQ2CHgvpV2YZ7n5ddcRap+tz+DZLEbbCWuq6YDi2UHdev35tg5SXl1NJSUmkRbEqu58y0uBEpijSeJdbMcju7m7U8jeqsmMh1dzcHAVirdMtGA1hqeA327IgLBjOWHNzc/T161dbEZzt6OiIrO4khJWCXW7FENZRtioyHcvzOuXqqo6aI93K+x79WKG+vp7y8vJiVod+iyvtRnogJ5XwU0WPUXUhxN8BcXp6SvPz85I9FgSda0tLS6SeyCLnN3jQruQHwxaEUURWdCx30dJEqWs96EErj8Loyl5+GSyeW4VRRNcaxAem92jh9Wau2aFKU1OTByNHQTxAiJeK48HEWCFOWPHBTSRUmJmZ8dwrEAguqquro5ycHA/GajV00XNlLQmlXYrfB4kNqIEs9f79e/N38B3Qtba2epVeTw2tVaKMCeu1C0LDMJScpPD6BWq4Nl+Q3Nxcb+6rXcwaRHCL7spgljIuCD1WhSutrKzQyclJYiC4q7KykjAiCrpq9ANxwbjqBlfxz58/0+rqql9oxaZf6+rq6movXvQc2DUicqXiqHT570PSeBBfvnyh5eVlXwjv+4I+Z0cfhlEqp2TOYK6KHwQG17AbydesBJ7+bm9vx4UIBYKLMS4CEC9l41V7DWNZZM14ERObm5t0dHQUCCI0CH8qUvPdu3edz02sVOyySPdRmHMtLi4GBohkw6CupT8ZGQ1Ps+Bqss5YjWQ8CHYluBECO5EtcIy4Pjw7O9sDkvXGBaMLHwC+f/9OW1tb3rTxJtuNQeSXQyU8rnvw4EHUf0Do5hC+j0CW64mbQCQcIzf90j9x/60q8icMDPqZfw3IP2F1JSnkGOAPAAAAAElFTkSuQmCC"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        Texture
      </span>
    </div>
  </article>
</article>
`;

exports[`MainEditorAssetHeader->load wdb test load wdb extract assets from loaded wdb asset extract material assets if wdb->material not exist in assets, extract them and add to assets should add "Materials" folder node and add material node into it test load the same wdb twice 1`] = `
<article
  className="wonder-asset-assetChildren"
>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wBDAAEBAQEBAQEBAQE"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        Texture
      </span>
    </div>
  </article>
</article>
`;

exports[`MainEditorAssetHeader->load wdb test load wdb extract assets from loaded wdb asset extract material assets if wdb->material not exist in assets, extract them and add to assets should add "Materials" folder node and add material node into it test load wdb once 1`] = `
<article
  className="wonder-asset-assetChildren"
>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wBDAAEBAQEBAQEBAQE"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        Texture
      </span>
    </div>
  </article>
</article>
`;

exports[`MainEditorAssetHeader->load wdb test load wdb extract assets from loaded wdb asset extract script attribute assets if wdb->script attribute not exist in assets, extract them and add to assets should add "ScriptAttributes" folder node and add scriptAttribute node into it test load the same wdb twice 1`] = `
<article
  className="wonder-asset-assetChildren"
>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="./public/img/scriptAttribute.png"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        aaa
      </span>
    </div>
  </article>
</article>
`;

exports[`MainEditorAssetHeader->load wdb test load wdb extract assets from loaded wdb asset extract script attribute assets if wdb->script attribute not exist in assets, extract them and add to assets should add "ScriptAttributes" folder node and add scriptAttribute node into it test load wdb once 1`] = `
<article
  className="wonder-asset-assetChildren"
>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="./public/img/scriptAttribute.png"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        aaa
      </span>
    </div>
  </article>
</article>
`;

exports[`MainEditorAssetHeader->load wdb test load wdb extract assets from loaded wdb asset extract script event function assets if wdb->script event function data not exist in assets, extract them and add to assets should add "ScriptEventFunctions" folder node and add scriptEventFunction node into it test load the same wdb once 1`] = `
<article
  className="wonder-asset-assetChildren"
>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="./public/img/scriptEventFunction.png"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        aaa
      </span>
    </div>
  </article>
</article>
`;

exports[`MainEditorAssetHeader->load wdb test load wdb extract assets from loaded wdb asset extract script event function assets if wdb->script event function data not exist in assets, extract them and add to assets should add "ScriptEventFunctions" folder node and add scriptEventFunction node into it test load the same wdb twice 1`] = `
<article
  className="wonder-asset-assetChildren"
>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="./public/img/scriptEventFunction.png"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        aaa
      </span>
    </div>
  </article>
</article>
`;

exports[`MainEditorAssetHeader->load wdb test load wdb extract assets from loaded wdb asset extract texture assets if wdb->texture not exist in assets, extract them and add to assets should add "Textures" folder node and add texture node into it test load the same wdb once 1`] = `
<article
  className="wonder-asset-assetChildren"
>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="object_url1"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        texture_0
      </span>
    </div>
  </article>
</article>
`;

exports[`MainEditorAssetHeader->load wdb test load wdb extract assets from loaded wdb asset extract texture assets if wdb->texture not exist in assets, extract them and add to assets should add "Textures" folder node and add texture node into it test load the same wdb twice 1`] = `
<article
  className="wonder-asset-assetChildren"
>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="object_url2"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        texture_0
      </span>
    </div>
  </article>
</article>
`;

exports[`MainEditorAssetHeader->load wdb test load wdb extract assets from loaded wdb asset extract texture assets if wdb->texture not exist in assets, extract them and add to assets texture asset should has unique name 1`] = `
<article
  className="wonder-asset-assetChildren"
>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="texture1img"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        texture_0
      </span>
    </div>
  </article>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="object_url1"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        texture_0 1
      </span>
    </div>
  </article>
</article>
`;

exports[`MainEditorAssetHeader->load wdb test load wdb extract assets from loaded wdb asset if wdb has no material should has no extracted material assets and texture assets 1`] = `
<article
  className="wonder-asset-assetChildren"
>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="data:image/png;base64 for img-canvas"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        Wdb
      </span>
    </div>
  </article>
</article>
`;

exports[`MainEditorAssetHeader->load wdb test load wdb extract assets from loaded wdb asset test wdb is exported scene wdb test extract script attribute assets if wdb->script attribute not exist in assets, extract them and add to assets should add "ScriptAttributes" folder node and add scriptAttribute node into it test load wdb once 1`] = `
<article
  className="wonder-asset-assetChildren"
>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="./public/img/scriptAttribute.png"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        aaa
      </span>
    </div>
  </article>
</article>
`;

exports[`MainEditorAssetHeader->load wdb test load wdb fix bug fix geometry bug 
        1.create gameObject g1 in scene;
        2.load truck wdb asset w1;

        g1->geometry->select geometry group widget shouldn't has "NoName Geometry"
         1`] = `
<article
  className="wonder-inspector-geometry"
>
  <div
    className="inspector-item"
  >
    <div
      className="item-header"
      title="geometry in use which is default or model's geometry"
    >
      Geometry
    </div>
    <div
      className="item-content"
    >
      <div
        className="inspector-select"
      >
        <div
          className="select-name"
          onClick={[Function]}
        >
          Wonder-Default-Cube
        </div>
        <div
          className="select-img"
          onClick={[Function]}
        >
          <img
            src="./public/img/select.png"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="select-component-content"
  >
    <div
      className="select-component-item"
    >
      <div
        className="select-item-header"
      >
        Geometry
      </div>
      <div
        className="select-item-body"
      >
        <div
          className="select-item-content"
          onClick={[Function]}
        >
          Cesium_Milk_Truck_0
        </div>
        <div
          className="select-item-content"
          onClick={[Function]}
        >
          Cesium_Milk_Truck_1
        </div>
        <div
          className="select-item-content"
          onClick={[Function]}
        >
          Cesium_Milk_Truck_2
        </div>
        <div
          className="select-item-content"
          onClick={[Function]}
        >
          Wheels
        </div>
        <div
          className="select-item-content select-item-active"
          onClick={[Function]}
        >
          Wonder-Default-Cube
        </div>
        <div
          className="select-item-content"
          onClick={[Function]}
        >
          Wonder-Default-Sphere
        </div>
      </div>
    </div>
    <div
      className="select-component-bg"
      onClick={[Function]}
    />
  </div>
</article>
`;

exports[`MainEditorAssetHeader->load wdb test load wdb relate wdb asset gameObjects with default geometrys 
        1.create gameObject g1 with default cube geometry in scene;
        2.load wdb asset w1(has one cube gameObject with default cube geometry);

        g1->geometry->select geometry group widget should only have not-duplicate-default-geometrys and be using default cube geometry
         1`] = `
<article
  className="wonder-inspector-geometry"
>
  <div
    className="inspector-item"
  >
    <div
      className="item-header"
      title="geometry in use which is default or model's geometry"
    >
      Geometry
    </div>
    <div
      className="item-content"
    >
      <div
        className="inspector-select"
      >
        <div
          className="select-name"
          onClick={[Function]}
        >
          Wonder-Default-Cube
        </div>
        <div
          className="select-img"
          onClick={[Function]}
        >
          <img
            src="./public/img/select.png"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="select-component-content"
  >
    <div
      className="select-component-item"
    >
      <div
        className="select-item-header"
      >
        Geometry
      </div>
      <div
        className="select-item-body"
      >
        <div
          className="select-item-content select-item-active"
          onClick={[Function]}
        >
          Wonder-Default-Cube
        </div>
        <div
          className="select-item-content"
          onClick={[Function]}
        >
          Wonder-Default-Sphere
        </div>
      </div>
    </div>
    <div
      className="select-component-bg"
      onClick={[Function]}
    />
  </div>
</article>
`;
